fixed section height
doesn't look so awkward now.

--- a/sass/base/global.scss
+++ b/sass/base/global.scss
@@ -45,10 +45,11 @@ video{
 
 // sections
 %sections{
-  height: 100vh;
+  // height: 100vh;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   margin: 0px;
+  padding: 50px 0;
 }
