--- a/sass/blocks/features.scss
+++ b/sass/blocks/features.scss
@@ -11,7 +11,7 @@
   background: rgba($accent,.5);
   color: #fff;
   width: 2300px;
-  margin: 50px 0 20px -2000px;;
+  margin: 00px 0 20px -2000px;;
 }
 
 .features img{
